demoappk8s/Stages/prod/service.yml
apiVersion: v1
kind: Service
metadata:
    name: demofrontend
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: demofrontend
