demoappk8s/Stages/prod/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoappprod
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demofrontend
            port:
              number: 80
